# xwlm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: pages.yml
aur/: PKGBUILD
crates/xwlm-cfg/: Cargo.toml
crates/xwlm-cfg/src/: format.rs  lib.rs  workspace.rs
crates/xwlm-cfg/src/extract/: hyprland.rs  mod.rs  sway.rs
fedora/: xwlm.spec
new/: Cargo.toml
new/src/: app.rs  main.rs  utils.rs
new/src/panes/: mod.rs  modes.rs  monitor_map.rs  scale.rs  transform.rs  workspace.rs
old/: CHANGELOG.md  Cargo.toml  README.md  install.sh  rustfmt.toml
old/src/: constants.rs  main.rs  setup.rs  state.rs  utils.rs  xwlm_config.rs
old/src/compositor/: extraction.rs  format.rs  hyprland.rs  mod.rs  position.rs  sway.rs  workspace_config.rs
old/src/tui/: key_binds.rs  layout.rs  mod.rs  ui.rs
old/src/tui/panels/: left.rs  mod.rs  mode.rs  workspace.rs
src/: app.rs  compositor.rs  config.rs  hypr_monitor.rs  main.rs  monitor.rs  setup.rs  ui.rs
