[package]
name = "xwlm"
version = "0.2.0"
edition = "2024"
description = "A TUI for managing Wayland monitor configurations (Hyprland, Sway, River)"
license = "MIT"
repository = "https://github.com/x34-dzt/xwlm"

[dependencies]
wlx_monitors = "0.1.8"
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
toml = "1.0.3"
thiserror = "2.0.18"
crossterm = "0.29.0"
